<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/auto_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="521dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/opponentTrench"
                    android:layout_width="121dp"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:text="@string/opponent_trench" />

                <TextView
                    android:id="@+id/OppTrenchCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white"
                    android:textSize="24sp"
                    android:visibility="visible" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="5dp"
                android:layout_height="match_parent">

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/rendezvous"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:text="@string/rendezvous" />

                <TextView
                    android:id="@+id/RendezvousCount"
                    android:layout_width="59dp"
                    android:layout_height="44dp"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="5dp"
                android:layout_height="match_parent">

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/AllianceTrenchCount"
                    android:layout_width="59dp"
                    android:layout_height="44dp"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/alliance_trench"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:minHeight="48dp"
                    android:text="@string/alliance_trench" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/AutoLowHit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/auto_low_hit" />

                <TextView
                    android:id="@+id/autoLowHitCount"
                    android:layout_width="59dp"
                    android:layout_height="44dp"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="5dp"
                android:layout_height="match_parent">

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/AutoHighHit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/auto_high_hit" />

                <TextView
                    android:id="@+id/autoHighHitCount"
                    android:layout_width="59dp"
                    android:layout_height="44dp"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/autoLowMiss"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/auto_low_miss" />

                <TextView
                    android:id="@+id/autoLowMissCount"
                    android:layout_width="59dp"
                    android:layout_height="44dp"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="5dp"
                android:layout_height="match_parent">

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/autoHighMiss"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/auto_high_miss" />

                <TextView
                    android:id="@+id/autoHighMissCount"
                    android:layout_width="59dp"
                    android:layout_height="44dp"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/FieldArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/field_area" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/crossBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cross"
                android:textColor="#455A64"
                android:textOff="@string/cross"
                android:textOn="@string/cross" />

            <FrameLayout
                android:layout_width="5dp"
                android:layout_height="match_parent">

            </FrameLayout>

            <ToggleButton
                android:id="@+id/trenchBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/trench"
                android:textColor="#455A64"
                android:textOff="@string/trench"
                android:textOn="@string/trench" />

            <FrameLayout
                android:layout_width="5dp"
                android:layout_height="match_parent">

            </FrameLayout>

            <ToggleButton
                android:id="@+id/midBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mid"
                android:textColor="#455A64"
                android:textOff="@string/mid"
                android:textOn="@string/mid" />

            <FrameLayout
                android:layout_width="5dp"
                android:layout_height="match_parent">

            </FrameLayout>

            <ToggleButton
                android:id="@+id/targetBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/target"
                android:textColor="#455A64"
                android:textOff="@string/target"
                android:textOn="@string/target" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>